--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "lockfileVersion": 1,
   "requires": true,
+  "scripts": {
+    "start": "node app2.js"
+  },
   "dependencies": {
     "accepts": {
       "version": "1.3.5",
@@ -356,3 +359,4 @@
     }
   }
 }
+
